# LinuxChatServer

./: CMakeLists.txt
ChatClient/: CMakeLists.txt
ChatClient/include/: group.hpp  public.hpp
ChatClient/src/: chatclient.cpp
ChatServer/: CMakeLists.txt  mysql.ini
ChatServer/include/connectionpool/: connectionpool.hpp
ChatServer/include/database/: db.h
ChatServer/include/model/: friendmodel.hpp  group.hpp  groupmodel.hpp  groupuser.hpp  offlinemsgmodel.hpp  user.hpp  usermodel.hpp
ChatServer/include/redis/: redis.hpp
ChatServer/include/server/: chatserver.hpp  chatservice.hpp
ChatServer/src/connectionpool/: connectionpool.cpp
ChatServer/src/db/: db.cpp
ChatServer/src/model/: friendmodel.cpp  groupmodel.cpp  offlinemsgmodel.cpp  usermodel.cpp
ChatServer/src/redis/: redis.cpp
ChatServer/src/server/: chatserver.cpp  chatservice.cpp  main.cpp
